fix(prose): make hr visible

--- a/packages/editor/src/components/editor-view.module.css
+++ b/packages/editor/src/components/editor-view.module.css
@@ -124,6 +124,10 @@
   letter-spacing: var(--em-font-tracking);
 }
 
+.editor hr {
+  width: 100%;
+}
+
 .editor pre {
   white-space: pre-wrap;
 }
